--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Optimize my Image v1.3.9</title>
+    <title>Optimize my Image v1.4.2</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet">
@@ -687,6 +687,41 @@
               transform: scale(1.2);
               filter: drop-shadow(0 0 15px rgb(var(--color-primary-dark) / 0.8));
           }
+      }
+
+      /* Mobile Performance Optimizations */
+      @media (max-width: 768px) {
+        .drag-drop-glow-section .blob,
+        .gradient-bg .blob {
+          filter: blur(80px); /* Reduce blur intensity */
+          animation-duration: 25s !important; /* Slow down animations */
+        }
+        
+        .drag-drop-glow-section .blob1 {
+          width: 300px;
+          height: 300px;
+        }
+          .drag-drop-glow-section .blob2 {
+          width: 400px;
+          height: 400px;
+        }
+
+        .glass-card-glow, .glass-card {
+          backdrop-filter: blur(15px);
+          -webkit-backdrop-filter: blur(15px);
+        }
+        
+        .how-it-works-step .step-number {
+          font-size: 6rem; /* Reduce giant number size */
+        }
+
+        .hero-title {
+            font-size: 3rem; /* 48px, instead of 5xl/7xl */
+            line-height: 1.1;
+        }
+        .hero-subtitle {
+            font-size: 1.125rem; /* 18px */
+        }
       }
     </style>
 <script type="importmap">
