--- a/index.html
+++ b/index.html
@@ -713,6 +713,22 @@
           }
       }
 
+      /* Glowing button animation */
+      @keyframes pulse-glow-button-light {
+        0%, 100% { box-shadow: 0 0 15px -5px rgb(var(--color-primary-light) / 0.5), 0 0 5px -5px rgb(var(--color-primary-light) / 0.5), var(--shadow-theme-lg); }
+        50% { box-shadow: 0 0 25px 0px rgb(var(--color-primary-light) / 0.7), 0 0 10px -5px rgb(var(--color-primary-light) / 0.7), var(--shadow-theme-xl); }
+      }
+      @keyframes pulse-glow-button-dark {
+        0%, 100% { box-shadow: 0 0 15px -5px rgb(var(--color-primary-dark) / 0.5), 0 0 5px -5px rgb(var(--color-primary-dark) / 0.5), var(--shadow-theme-lg); }
+        50% { box-shadow: 0 0 25px 0px rgb(var(--color-primary-dark) / 0.7), 0 0 10px -5px rgb(var(--color-primary-dark) / 0.7), var(--shadow-theme-xl); }
+      }
+      .animate-pulse-glow-button {
+        animation: pulse-glow-button-light 3s infinite ease-in-out;
+      }
+      .dark .animate-pulse-glow-button {
+        animation-name: pulse-glow-button-dark;
+      }
+
       /* Mobile Performance Optimizations */
       @media (max-width: 768px) {
         .drag-drop-glow-section .blob,
